# hello-sel4

./: CMakeLists.txt  README.md  default.xml  manifest.xml  settings.cmake  shell.nix
apps/hello/: CMakeLists.txt
apps/hello/src/: main.c
